--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,9 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <div data-controller="anime" data-anime-url="<%= search_animes_path %>">
+    <div id="search_bar" data-controller="anime" data-anime-url="<%= search_animes_path %>">
       <form class="form-inline my-2 my-lg-0">
         <input data-target="anime.q" data-action="keyup->anime#search" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
 
